--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "habnim",
+  "name": "graphql_fullstack",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.5.10",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.3.0",
     "react": "^18.0.0",
+    "apollo-boost": "^0.1.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
